ConfigParser/CompileError.txt
src/ConfigParser.cpp: In function ‘int GetConfig(char*, void*)’:
src/ConfigParser.cpp:307:9: warning: unused variable ‘lnRetVal’ [-Wunused-variable]
     int lnRetVal = 0;
         ^~~~~~~~
src/ConfigParser.cpp: In function ‘int GetConfig(char*, void*)’:
src/ConfigParser.cpp:307:9: warning: unused variable ‘lnRetVal’ [-Wunused-variable]
     int lnRetVal = 0;
         ^~~~~~~~
src/ConfigParser.cpp: In function ‘int GetConfig(char*, void*)’:
src/ConfigParser.cpp:307:9: warning: unused variable ‘lnRetVal’ [-Wunused-variable]
     int lnRetVal = 0;
         ^~~~~~~~
src/ConfigParser.cpp: In function ‘int GetConfig(char*, void*)’:
src/ConfigParser.cpp:307:9: warning: unused variable ‘lnRetVal’ [-Wunused-variable]
     int lnRetVal = 0;
         ^~~~~~~~
src/ConfigParser.cpp: In function ‘int GetConfig(char*, void*)’:
src/ConfigParser.cpp:307:9: warning: unused variable ‘lnRetVal’ [-Wunused-variable]
     int lnRetVal = 0;
         ^~~~~~~~
src/ConfigParser.cpp: In function ‘int GetConfig(char*, void*)’:
src/ConfigParser.cpp:301:9: warning: unused variable ‘lnRetVal’ [-Wunused-variable]
     int lnRetVal = 0;
         ^~~~~~~~
src/ConfigParser.cpp: In function ‘int GetConfig(char*, void*)’:
src/ConfigParser.cpp:300:9: warning: unused variable ‘lnRetVal’ [-Wunused-variable]
     int lnRetVal = 0;
         ^~~~~~~~
src/ConfigParser.cpp: In function ‘int AddTokenToStore(std::__cxx11::string, std::map<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> >&, std::map<std::__cxx11::basic_string<char>, std::map<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> > >*)’:
src/ConfigParser.cpp:223:36: error: ‘lpcDelim’ was not declared in this scope
                         if (lpcF < lpcDelim )
                                    ^~~~~~~~
src/ConfigParser.cpp:223:36: note: suggested alternative: ‘lpcDelimiter’
                         if (lpcF < lpcDelim )
                                    ^~~~~~~~
                                    lpcDelimiter
src/ConfigParser.cpp:227:31: warning: unused variable ‘lpcDelim’ [-Wunused-variable]
                         char* lpcDelim = strchr(lcBuffer1,'=');
                               ^~~~~~~~
src/ConfigParser.cpp: In function ‘int GetConfig(char*, void*)’:
src/ConfigParser.cpp:297:9: warning: unused variable ‘lnRetVal’ [-Wunused-variable]
     int lnRetVal = 0;
         ^~~~~~~~
src/ConfigParser.cpp: In function ‘int GetConfig(char*, void*)’:
src/ConfigParser.cpp:297:9: warning: unused variable ‘lnRetVal’ [-Wunused-variable]
     int lnRetVal = 0;
         ^~~~~~~~
